--- a/build.gradle
+++ b/build.gradle
@@ -82,12 +82,10 @@ jar {
     }
 }
 
-jar.finalizedBy('reobfJar')
-
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact tasks.reobfJar
+            artifact jar
 
             groupId = project.group
             artifactId = archivesBaseName
@@ -101,13 +99,12 @@ publishing {
             url = uri("https://maven.pkg.github.com/dev-ananta/minecraft-dullahan")
 
             credentials {
-                username = System.getenv("USERNAME")
-                password = System.getenv("TOKEN")
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
 }
-
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
